# thesis-grpo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  RUNBOOK.md  analyze.py  config.yaml  data.py  debug_g1_completions.json  debug_g2_completions.json  docker-compose.yml  eval_sft.py  evaluate.py  filter_benchmark.py  filter_offline.py  filter_tune.py  grpo_trainer.py  probe_dataset.py  pyproject.toml  rewards.py  run_all.py  run_grpo.py  run_sft.py  session-ses_1600.md  stabilization.py  todo.txt
chats/: SESSION-2026-06-09.md
data/: aime24_eval.jsonl  download_datasets.py  openmath_instruct_2_probe.jsonl  svamp_eval.jsonl
diag/: _config.yaml  pipeline_log.csv  report.txt
docs/: Final Methodology & Results.md  Revised Methodology.md  Supervisor Demo.md  Synthesized Methodology.md  pipeline.mermaid  revision.md
